--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^16.9.8",
     "bulma": "^0.9.1",
     "classnames": "^2.2.6",
+    "firebase": "^8.2.0",
+    "firebase-admin": "^9.4.2",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
